restructured files and also fixed bug where user could enter whitespace into input field and bypass the validation check. Added media queries to prevent collapse of header on smaller screens.

--- a/frontend/src/shared/components/Header/Header.css
+++ b/frontend/src/shared/components/Header/Header.css
@@ -232,13 +232,9 @@
 @media (max-width: 400px) {
   .header__title {
     font-size: 2.5rem;
+    letter-spacing: 0rem;
   }
   .icon-menu {
     height: 2.5rem;
-  }
-}
-@media (max-width: 355px) {
-  .header__title {
-    font-size: 2rem;
   }
 }
